--- a/dwu.html
+++ b/dwu.html
@@ -51,13 +51,13 @@
 
 			  <div class="carousel-inner" role="listbox">
 			    <div class="item active">
-			      <img src="../images/slide1.jpg" alt="...">
+			      <img src="./images/slide1.jpg" alt="...">
 			    </div>
 			    <div class="item">
-			      <img src="../images/slide2.jpg" alt="...">
+			      <img src="./images/slide2.jpg" alt="...">
 			    </div>
 					<div class="item">
-						<img src="../images/slide3.jpg" alt="...">
+						<img src="./images/slide3.jpg" alt="...">
 					</div>
 			  </div>
 
