--- a/kontakt.html
+++ b/kontakt.html
@@ -67,8 +67,8 @@
 	</div>
 	</footer>
 			<!-- BEGIN SKRYPTY -->
-			<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-			<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+			<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+			<script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 			<!-- END SKRYPTY -->
 	</body>
 </html>
