--- a/oferta.html
+++ b/oferta.html
@@ -38,7 +38,7 @@
 						Oddajemy do Państwa dyspozycji noclegi w nowo wybudowanym (2016r) budynku. Oferujemy przytulne i funkcjonalnie urządzone pokoje:
 						2, 3 i 4 osobowe z balkonami i pełnym węzłem sanitarnym, bezpłatny dostęp do internetu(WiFi), kuchnię dla gości z kompletnym wyposażeniem, miejsce do przechowywania sprzetu, bezpłatny, oświetlony parking na terenie posesji, niezależne wejście dla gości.
 						W budynku znajduje się także wypożyczalnia sprzetu.<br /><br />
-						Zapraszamy do zapoznania się z naszą ofertą:<br />
+						Zapraszamy do zapoznania się z naszą ofertą:<br /><br />
 					</p>
 					<a href="jedno.html">2 OSOBOWY</a>
 					<a href="dwu.html">3 OSOBOWY</a>
@@ -67,27 +67,9 @@
 		</div>
 	</div>
 	</footer>
-	<script>
- function initMap() {
-	 var uluru = {lat: 49.7775081, lng: 20.4204369};
-	 var map = new google.maps.Map(document.getElementById('map'), {
-		 zoom: 15,
-		 center: uluru,
-		 styles:[{"featureType":"all","elementType":"all","stylers":[{"saturation":-100},{"gamma":0.5}]}]
-	 });
-	 var marker = new google.maps.Marker({
-		 position: uluru,
-		 map: map
-	 });
- }
-</script>
-<!-- BEGIN SKRYPTY -->
-<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjMtohWU9fEoB_WCOUi8Y88CTHA7mAX3E&callback=initMap">
-</script>
 			<!-- BEGIN SKRYPTY -->
-			<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-			<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+			<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+			<script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 			<!-- END SKRYPTY -->
 	</body>
 </html>
