--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjMtohWU9fEoB_WCOUi8Y88CTHA7mAX3E&callback=initMap">
 </script>
 			<!-- BEGIN SKRYPTY -->
-			<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-			<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+			<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+			<script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 			<!-- END SKRYPTY -->
 	</body>
 </html>
